--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
 <button>WORLD</button>
 <input type="radio">
 <input type="password">
+<div>HELLO WORLD!</div>
+
+<p>Как научится печатать на клавиатуре</p>
 </body>
 </html>
